@@ -204,6 +204,7 @@ $jpackageArgs = @(
     "--dest", $destPath,
     "--app-version", $projectVersion,
     "--java-options", $javaOptions,
+    "--java-options", "--add-opens=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED",
     "--runtime-image", $jlinkDir
 )
 
